src/stylesheets/section/content.css
#content-container {
  min-width: 100%;
  height: 90vh;
  border-bottom: 1px solid lightgrey;
}

#content-container > .row {
  height: 100%;
}

/* files */
#files-container {
  padding: 0;
}

.video-counting, .json-counting {
  height: 3%;
}

#video-files-container, #json-file-container {
  padding-left: 0.5vw;
  padding-right: 0.5vw;
  overflow-x: auto;
  overflow-y: auto;
  height: 47%;
  text-align: left;
}

#video-files-container {
  border-bottom: 1px solid lightgrey;
}

.video-file:hover, .json-video-file:hover {
  color: lime;
  cursor: pointer;
}

/* main view */
#main-view-container {
  max-height: 100%;
  width: 100%;
  padding: 0;
  background-color: black;
  color: white;
}

#frames-progress-bar {
  height: 1%;
}

#main-view-image-container {
  position: absolute;
  z-index: 1;
  padding: 1rem;
}

#main-view-image {
  border: 1px solid lime;
  width: 100%;
}

/* control 1 */
#frame-list-container {
  overflow: auto;
}

.video-frame {
  margin: 1px;
}

#control1-container {
  border-right: 1px solid lightgrey;
  padding: 0;
}

#frame-list-container {
  height: 100%;
}

#frame-index-container {
  height: 10%;
}

#section-confirm-container {
  height: 8%;
  width: 100%;
  display: table;
  border-top: 1px solid lightgrey;
}

#section-confirm-container > div {
  display: table-cell;
  vertical-align: middle;
}

#section-confirm {
  height: 90%;
  width: 98%;
  font-size: 2vw;
  padding: 0;
}

/* control 2 */
#control2-container {
  padding: 0;
}

#criteria-container {
  height: 32%;
  overflow: auto;
}

#criteria-list {
  text-align: left;
}

#criteria-list li:hover {
  background-color: crimson;
  color: white;
}

#criteria-list label {
  cursor: pointer;
}

#result-list-container {
  font-size: 1vw;
  overflow: auto;
  height: 42%;
}

#complete-container {
  height: 8%;
  width: 100%;
  display: table;
  border-top: 1px solid gray;
}

#complete-container > div {
  display: table-cell;
  vertical-align: middle;
}

#complete, #update {
  height: 90%;
  width: 98%;
  font-size: 2vw;
  padding: 0;
}

